--- a/style/style.css
+++ b/style/style.css
@@ -122,15 +122,16 @@ body {
 
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 1px;
 }
 
 ::-webkit-scrollbar-track {
-    background-color: var(--white);
+    /* background-color: var(--white); */
+    background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #e74bb8;
+    background-color: var(--main-color);
 }
 
 /* Styling for all grid items with glassmorphism */
@@ -145,17 +146,17 @@ body {
 
 /* Grid positioning */
 .profile-card { grid-column: 1/6; grid-row: 1/4; }
-.AI-box { grid-column: 1/6; grid-row: 6/16; }
-.system-details { grid-column: 1/6; grid-row: 4/6; }
+.AI-box { grid-column: 1/6; grid-row: 4/16; }
 .geeta-shlok-box { grid-column: 6/12; grid-row: 1/3; }
-.todo-list { grid-column: 12/19; grid-row: 10/16; }
+.todo-list { grid-column: 12/19; grid-row: 9/16; }
 .searchbar { grid-column: 12/19; grid-row: 1/2; }
 .searchBar-input { grid-column: 12/19; grid-row: 2/3; }
 .side-appbar { grid-column: 19/21; grid-row: 1/16; }
-.CLK { grid-column: 6/12; grid-row: 3/7; }
-.calendar-item { grid-column: 6/12; grid-row: 7/13; }
-.github { grid-column: 6/12; grid-row: 13/16; }
-.music { grid-column: 12/19; grid-row: 3/6; }
+/* .CLK { grid-column: 6/12; grid-row: 3/7; } */
+.calendar-item { grid-column: 6/12; grid-row: 3/16; }
+/* .github { grid-column: 6/12; grid-row: 13/16; } */
+/* .music { grid-column: 12/19; grid-row: 3/6; } */
+.github { grid-column: 12/19; grid-row: 3/6; }
 .notebook { grid-column: 12/19; grid-row: 6/10; }
 
 /* Profile section styling */
@@ -294,6 +295,9 @@ body {
     text-align: center;
     background-color: rgba(255, 255, 255, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-top-left-radius: var(--border-radius-20);
+    border-top-right-radius: var(--border-radius-20);
+    
 }
 
 .calendar-nav {
@@ -380,6 +384,43 @@ body {
     border-radius: 10px;
 }
 
+/* Day details styles */
+.day-details {
+    padding: 10px;
+    /* background-color: rgba(255, 255, 255, 0.1); */
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    color: var(--text-color);
+    font-size: 14px;
+    max-height: 340px;
+    height: 100vh;
+    overflow-y: auto;
+}
+
+.day-details h4 {
+    margin: 10px 0;
+    font-size: 18px;
+    text-align: center;
+}
+
+.day-details h5 {
+    margin: 10px 0 5px 0;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.day-details ul {
+    /* list-style-type: disc; */
+    margin-bottom:0;
+    padding-left: 20px;
+    /* padding-bottom: 20px; */
+}
+
+.day-details ul li {
+    margin-bottom: 20px;
+    font-size: 16px;
+}
+
 /* Notebook shortcut section styling */
 .notebook {
     display: grid;
@@ -457,4 +498,116 @@ body {
 
 .app-shortcut .img-logo {
     width: 37px;
+}
+
+
+/* GitHub */
+.github {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: #f0f0f0; */
+    padding: 8px;
+    /* border-radius: 6px; */
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+}
+
+.github-info-item {
+    font-size: 14px;
+    margin: 0;
+}
+
+.github-info-item span {
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+/* chagpt */
+
+
+h2 {
+    text-shadow: 1px 1px 2px rgba(0,0,0,1);
+    color: #fff;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.chat-container {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 25px;
+    box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.7);
+    overflow: hidden;
+    position: relative;
+    /* width: 320px; */
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.chat {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    list-style-type: none;
+    padding: 10px;
+    margin: 0;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+.message {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 25px;
+    box-shadow: 0px 15px 5px 0px rgba(0,0,0,0.5);
+    position: relative;
+    margin-bottom: 20px;
+    padding: 10px 20px;
+}
+
+.message.left {
+    align-self: flex-start;
+}
+
+.message.right {
+    align-self: flex-end;
+}
+
+.message p {
+    margin: 0;
+}
+
+.message-box {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.text_input {
+    font-size: 16px;
+    padding: 10px 15px;
+    width: 80%;
+    border-radius: 25px;
+    border: 1px solid #ddd;
+}
+
+#send-btn {
+    background-color: #0084ff;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 10px;
+    border-radius: 25px;
+    cursor: pointer;
 }
