--- a/style/style.css
+++ b/style/style.css
@@ -152,10 +152,10 @@ body {
 .searchbar { grid-column: 12/19; grid-row: 1/2; }
 .searchBar-input { grid-column: 12/19; grid-row: 2/3; }
 .side-appbar { grid-column: 19/21; grid-row: 1/16; }
-/* .CLK { grid-column: 6/12; grid-row: 3/7; } */
+.CLK { grid-column: 12/19; grid-row: 6/9; }
 .calendar-item { grid-column: 6/12; grid-row: 3/16; }
 /* .github { grid-column: 6/12; grid-row: 13/16; } */
-/* .music { grid-column: 12/19; grid-row: 3/6; } */
+.music { grid-column: 12/19; grid-row: 3/6; }
 .github { grid-column: 12/19; grid-row: 3/6; }
 .notebook { grid-column: 12/19; grid-row: 6/10; }
 
@@ -418,7 +418,8 @@ body {
 
 .day-details ul li {
     margin-bottom: 20px;
-    font-size: 16px;
+    font-size: 15px;
+    font-family: cursive;
 }
 
 /* Notebook shortcut section styling */
@@ -530,7 +531,7 @@ body {
 
 h2 {
     text-shadow: 1px 1px 2px rgba(0,0,0,1);
-    color: #fff;
+    /* color: #fff; */
     letter-spacing: 1px;
     text-transform: uppercase;
     text-align: center;
@@ -542,7 +543,6 @@ h2 {
     box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.7);
     overflow: hidden;
     position: relative;
-    /* width: 320px; */
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -562,12 +562,13 @@ h2 {
 }
 
 .message {
-    background-color: rgba(255, 255, 255, 0.9);
+    /* background-color: rgba(255, 255, 255, 0.9); */
     border-radius: 25px;
     box-shadow: 0px 15px 5px 0px rgba(0,0,0,0.5);
     position: relative;
     margin-bottom: 20px;
-    padding: 10px 20px;
+    padding: 8px 15px;
+    border: var(--glass-border);
 }
 
 .message.left {
@@ -586,20 +587,27 @@ h2 {
     display: flex;
     align-items: center;
     padding: 10px;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: var(--grid-item-glass-bg);
     border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
-.text_input {
+
+.chat-container .text_input {
     font-size: 16px;
     padding: 10px 15px;
     width: 80%;
     border-radius: 25px;
     border: 1px solid #ddd;
+    background: transparent;
+
+}
+
+.chat-container .text_input::placeholder{
+    color: white;
 }
 
 #send-btn {
-    background-color: #0084ff;
+    background-color: var(--main-color);
     border: none;
     color: white;
     padding: 10px 20px;
@@ -611,3 +619,98 @@ h2 {
     border-radius: 25px;
     cursor: pointer;
 }
+
+
+
+/* ---------------- TODO Styling  ---------------- */
+.wrapper-todo {
+    backdrop-filter: var(--blur-10);
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+.task-input {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    
+}
+.task-input img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
+.task-input input {
+    width: calc(100% - 30px);
+    padding: 10px;
+    border: var(--glass-border);
+    border-radius: 3px;
+    background: var(--grid-item-glass-bg);
+}
+.task-input input::placeholder{color: var(--main-color);}
+.controls {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.filters span {
+    cursor: pointer;
+    margin-right: 10px;
+}
+.filters .active {
+    font-weight: bold;
+}
+.clear-btn {
+    background: var(--main-color);
+    backdrop-filter: blur(5px) saturate(200%);
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    padding: 5px 10px;
+    transition: all 0.3s ease;
+}
+.clear-btn:hover {
+    background: #ffffff;
+    color: var(--main-color);
+}
+
+
+.task-box {
+    list-style: none;
+    padding: 0;
+}
+.task-box li {
+    backdrop-filter: blur(5px) saturate(200%);
+    background: var(--grid-item-glass-bg);
+    padding: 10px;
+    margin-bottom: 10px;
+    border: var(--glass-border);
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.task-box li.completed {
+    text-decoration: line-through;
+}
+
+.task-box li button {
+    background: var(--main-color);
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 5px 10px;
+    transition: all 0.3s ease;
+}
+
+.task-box li button:hover {
+    background: #ffffff;
+    color: var(--main-color);
+}
+
