--- a/style/style.css
+++ b/style/style.css
@@ -49,17 +49,14 @@ a {
     list-style: none;
     text-decoration: none;
 }
-
 body {
     overflow: hidden;
 }
-
 .container {
-    position: relative;
+    /* position: relative; */
     width: 100%;
     height: 100vh;
 }
-
 .slide {
     width: 100%;
     height: 100vh;
@@ -70,7 +67,6 @@ body {
     left: 0;
     display: none;
 }
-
 .arrow {
     position: absolute;
     top: 50%;
@@ -80,22 +76,27 @@ body {
     border-radius: 50%;
     transition: background 500ms;
 }
-
 .arrow i {
     color: white;
     font-size: 25px;
 }
-
 .l {
-    left: 0;
+   left: 0;
 }
-
 .r {
     right: 0;
 }
 
 /* General Grid Styling */
-#wrapper {
+#main-body {
+    background-image: url('../Backgrounds/5.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+/* ! styling for the IMP widget SLide */
+#slide1Wrapper {
     display: grid;
     grid-template-columns: repeat(20, 1fr);
     grid-template-rows: repeat(15, 1fr);
@@ -107,21 +108,6 @@ body {
     background-position: center;
     z-index: 1;
 }
-#main-body {
-    background-image: url('../Backgrounds/5.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-/* .w1 {
-    background-image: url('/5.jpg');
-}
-
-.w2 {
-    background-image: url('/8.jpg');
-} */
-
 /* Custom Scrollbar */
 ::-webkit-scrollbar {
     width: 3px;
@@ -292,12 +278,6 @@ body {
     font-size: 20px;
     cursor: pointer;
 }
-
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
-}
-
 /* Calendar item styles */
 .calendar-header {
     padding: 5px;
@@ -392,7 +372,6 @@ body {
     color: var(--text-color);
     border-radius: 10px;
 }
-
 /* Day details styles */
 .day-details {
     padding: 10px;
@@ -455,7 +434,6 @@ body {
         color: orangered;
     }
 }
-
 .shortcut-name {
     margin: 0;
     font-size: 13px;
@@ -467,7 +445,6 @@ body {
     font-size: 20px;
     margin: 10px;
 }
-
 /* Sidebar styling */
 .grid-item.side-appbar {
     display: grid;
@@ -477,7 +454,6 @@ body {
     padding: 10px;
     width: 150px;
 }
-
 .app-shortcut {
     display: flex;
     justify-content: center;
@@ -485,7 +461,6 @@ body {
     width: 100%;
     height: 40px;
 }
-
 .app-shortcut a {
     display: flex;
     justify-content: center;
@@ -495,59 +470,26 @@ body {
     text-decoration: none;
     color: var(--text-color);
     font-size: 18px;
-    
     padding: 10px 0;
     margin: 10px;
-    
 }
-
 .app-shortcut i {
     font-size: 24px;
     color: var(--text-color);
 }
-
 .app-shortcut .img-logo {
     width: 37px;
 }
-
 .app-shortcut .UDEMY {
     height: 45px;
 }
-
-/* GitHub */
-.github {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: #f0f0f0; */
-    padding: 8px;
-    /* border-radius: 6px; */
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
-
-    display: grid;
-    grid-template-columns: repeat(2 , 1fr);
-}
-
-.github-info-item {
-    font-size: 14px;
-    margin: 0;
-}
-
-.github-info-item span {
-    font-weight: bold;
-    margin-right: 5px;
-}
-
 /* chagpt */
-
-
-h2 {
+/* h2 {
     text-shadow: 1px 1px 2px rgba(0,0,0,1);
-    /* color: #fff; */
     letter-spacing: 1px;
     text-transform: uppercase;
     text-align: center;
-}
+} */
 
 .chat-container {
     background-color: rgba(0, 0, 0, 0.4);
